--- a/Air_Band/Air_Band.vcxproj.filters
+++ b/Air_Band/Air_Band.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="src\TestSDK.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HandFinger_Dectect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
